--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2553,15 +2553,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 79a006e] 102-tree\n",
-      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
+      "[main f0c6483] 103-commas\n",
+      " 2 files changed, 128 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/103-commas\n"
      ]
     },
     {
@@ -2569,7 +2570,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c6a7b42..79a006e  main -> main\n"
+      "   79a006e..f0c6483  main -> main\n"
      ]
     }
    ],
@@ -2577,6 +2578,147 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"103-commas\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 19.File type: School</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a magic file school.mgc that can be used with the command file to detect School data files. School data files always contain the string SCHOOL at offset 0.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:/tmp/magic$ cp /bin/ls .\n",
+    "ubuntu@ip-172-31-63-244:/tmp/magic$ ls -la\n",
+    "total 268\n",
+    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 02:44 .\n",
+    "drwxrwxrwt 11 root   root   139264 Sep 20 02:44 ..\n",
+    "-rw-r--r--  1 ubuntu ubuntu    496 Sep 20 02:42 school.mgc\n",
+    "-rwxr-xr-x  1 ubuntu ubuntu 110080 Sep 20 02:43 ls\n",
+    "-rw-rw-r--  1 ubuntu ubuntu     50 Sep 20 02:06 thisisaschoolfile\n",
+    "-rw-rw-r--  1 ubuntu ubuntu     30 Sep 20 02:16 thisisatextfile\n",
+    "ubuntu@ip-172-31-63-244:/tmp/magic$ file --mime-type -m school.mgc *\n",
+    "school.mgc:         application/octet-stream\n",
+    "ls:                    application/octet-stream\n",
+    "thisisaschoolfile: School\n",
+    "thisisatextfile:       text/plain\n",
+    "ubuntu@ip-172-31-63-244:/tmp/magic$ file -m school.mgc *\n",
+    "school.mgc:         data\n",
+    "ls:                    data\n",
+    "thisisaschoolfile: School data\n",
+    "thisisatextfile:       ASCII text\n",
+    "ubuntu@ip-172-31-63-244:/tmp/magic$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `104-school.mgc`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/104-school.mgc\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/104-school.mgc\n",
+    "#!/bin/bash\n",
+    "0 string SCHOOL School data file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./0x00-shell_basics/104-school.mgc: line 2: 0: command not found\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'chmod u+x 0x00-shell_basics/104-school.mgc\\n ./0x00-shell_basics/104-school.mgc\\n'' returned non-zero exit status 127.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[95], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x 0x00-shell_basics/104-school.mgc\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m ./0x00-shell_basics/104-school.mgc\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x 0x00-shell_basics/104-school.mgc\\n ./0x00-shell_basics/104-school.mgc\\n'' returned non-zero exit status 127."
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/104-school.mgc\n",
+    "./0x00-shell_basics/104-school.mgc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main f0c6483] 103-commas\n",
+      " 2 files changed, 128 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/103-commas\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   79a006e..f0c6483  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"104-sch\"\n",
     "git push"
    ]
   },
