--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,14 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2656,13 +2649,12 @@
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
     "#!/bin/bash\n",
-    "0 string SCHOOL School data file\n",
-    "!:mime School"
+    "0       string  SCHOOL  School data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2681,16 +2673,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f92f3a7] 104-school.mgc\n",
-      " 2 files changed, 18 insertions(+), 16 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/school.mgc\n"
+      "[main a1bd486] 104-school.mgc\n",
+      " 2 files changed, 14 insertions(+), 26 deletions(-)\n"
      ]
     },
     {
@@ -2698,7 +2689,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   5f95c83..f92f3a7  main -> main\n"
+      "   f92f3a7..a1bd486  main -> main\n"
      ]
     }
    ],
