--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2654,6 +2654,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!file -C -m 0x00-shell_basics/school.mgc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/school.mgc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file: bad magic in `0x00-shell_basics/school.mgc' (Success)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!file -m 0x00-shell_basics/school.mgc thisisaschoolfile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -2673,15 +2710,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a1bd486] 104-school.mgc\n",
-      " 2 files changed, 14 insertions(+), 26 deletions(-)\n"
+      "[main e68e2c0] 104-school.mgc\n",
+      " 2 files changed, 8 insertions(+), 18 deletions(-)\n"
      ]
     },
     {
@@ -2689,7 +2726,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f92f3a7..a1bd486  main -> main\n"
+      "   a1bd486..e68e2c0  main -> main\n"
      ]
     }
    ],
