--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2648,6 @@
    ],
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
-    "#!/bin/bash\n",
     "0       string  SCHOOL  School data\n"
    ]
   },
@@ -2710,15 +2709,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e68e2c0] 104-school.mgc\n",
-      " 2 files changed, 8 insertions(+), 18 deletions(-)\n"
+      "[main 148051e] 104-school.mgc\n",
+      " 2 files changed, 41 insertions(+), 4 deletions(-)\n",
+      " create mode 100644 school.mgc\n"
      ]
     },
     {
@@ -2726,7 +2726,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   a1bd486..e68e2c0  main -> main\n"
+      "   e68e2c0..148051e  main -> main\n"
      ]
     }
    ],
