--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2648,8 @@
    ],
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
-    "0       string  SCHOOL  School data\n"
+    "0       string  SCHOOL  School data\n",
+    "!:mime School"
    ]
   },
   {
@@ -2662,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2709,16 +2710,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 148051e] 104-school.mgc\n",
-      " 2 files changed, 41 insertions(+), 4 deletions(-)\n",
-      " create mode 100644 school.mgc\n"
+      "[main a9cbdd0] 104-school.mgc\n",
+      " 2 files changed, 6 insertions(+), 7 deletions(-)\n"
      ]
     },
     {
@@ -2726,7 +2726,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e68e2c0..148051e  main -> main\n"
+      "   148051e..a9cbdd0  main -> main\n"
      ]
     }
    ],
