--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2654,21 +2654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!file -C -m 0x00-shell_basics/school.mgc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/school.mgc"
+    "file -C -m 0x00-shell_basics/school.mgc"
    ]
   },
   {
@@ -2710,15 +2701,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a9cbdd0] 104-school.mgc\n",
-      " 2 files changed, 6 insertions(+), 7 deletions(-)\n"
+      "[main dc188e1] 104-school.mgc\n",
+      " 2 files changed, 9 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -2726,7 +2717,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   148051e..a9cbdd0  main -> main\n"
+      "   a9cbdd0..dc188e1  main -> main\n"
      ]
     }
    ],
