--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2682,15 +2682,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 17f2a22] 104-school.mgc\n",
-      " 1 file changed, 26 insertions(+), 22 deletions(-)\n"
+      "[main 6058b4a] 104-school.mgc\n",
+      " 3 files changed, 11 insertions(+), 37 deletions(-)\n",
+      " delete mode 100755 0x00-shell_basics/104-school.mgc\n"
      ]
     },
     {
@@ -2698,7 +2699,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1fe9040..17f2a22  main -> main\n"
+      "   17f2a22..6058b4a  main -> main\n"
      ]
     }
    ],
