--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2648,23 +2648,23 @@
    ],
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
-    "0       string  SCHOOL  School data\n"
+    "0 string SCHOOL School data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "cd 0x00-shell_basics/\n",
-    "file -C -m school.mgc"
+    "file file --magic-file school.mgc --compile\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2682,16 +2682,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 6058b4a] 104-school.mgc\n",
-      " 3 files changed, 11 insertions(+), 37 deletions(-)\n",
-      " delete mode 100755 0x00-shell_basics/104-school.mgc\n"
+      "[main 9f59c7b] 104-school.mgc\n",
+      " 2 files changed, 7 insertions(+), 5 deletions(-)\n"
      ]
     },
     {
@@ -2699,7 +2698,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   17f2a22..6058b4a  main -> main\n"
+      "   6058b4a..9f59c7b  main -> main\n"
      ]
     }
    ],
