--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2682,15 +2682,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 9f59c7b] 104-school.mgc\n",
-      " 2 files changed, 7 insertions(+), 5 deletions(-)\n"
+      "[main 228d345] 104-school.mgc\n",
+      " 2 files changed, 9 insertions(+), 10 deletions(-)\n",
+      " rewrite 0x00-shell_basics/school.mgc (100%)\n"
      ]
     },
     {
@@ -2698,7 +2699,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   6058b4a..9f59c7b  main -> main\n"
+      "   9f59c7b..228d345  main -> main\n"
      ]
     }
    ],
