--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2648,23 +2648,22 @@
    ],
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
-    "0 string SCHOOL School data\n"
+    "0       string  SCHOOL      School data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cd 0x00-shell_basics/\n",
-    "file file --magic-file school.mgc --compile\n"
+    "file -C -m 0x00-shell_basics/school.mgc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2677,21 +2676,76 @@
    ],
    "source": [
     "%%bash\n",
-    "file --check school.mgc\n"
+    "file --check school.mgc\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 228d345] 104-school.mgc\n",
-      " 2 files changed, 9 insertions(+), 10 deletions(-)\n",
-      " rewrite 0x00-shell_basics/school.mgc (100%)\n"
+      "Writing 0x00-shell_basics/thisisaschoolfile\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/thisisaschoolfile \n",
+    "SCHOOL schools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/thisisatextfile\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/thisisatextfile\n",
+    "thisisatextfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x00-shell_basics/thisisaschoolfile: ASCII text\n",
+      "0x00-shell_basics/thisisatextfile:   ASCII text\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "file 0x00-shell_basics/thisisaschoolfile 0x00-shell_basics/thisisatextfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 52a0dfc] 104-school.mgc\n",
+      " 1 file changed, 5 insertions(+), 4 deletions(-)\n"
      ]
     },
     {
@@ -2699,7 +2753,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   9f59c7b..228d345  main -> main\n"
+      "   228d345..52a0dfc  main -> main\n"
      ]
     }
    ],
