--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2648,36 +2648,18 @@
    ],
    "source": [
     "%%file 0x00-shell_basics/school.mgc\n",
-    "0       string  SCHOOL      School data\n"
+    "0 string SCHOOL School data\n",
+    "!:mime School\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "file -C -m 0x00-shell_basics/school.mgc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cont\toffset\ttype\topcode\tmask\tvalue\tdesc\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "file --check school.mgc\n",
-    "\n"
    ]
   },
   {
@@ -2718,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2737,15 +2719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 52a0dfc] 104-school.mgc\n",
-      " 1 file changed, 5 insertions(+), 4 deletions(-)\n"
+      "[main 65baacc] 104-school.mgc\n",
+      " 5 files changed, 68 insertions(+), 12 deletions(-)\n",
+      " rewrite 0x00-shell_basics/school.mgc (100%)\n",
+      " create mode 100644 0x00-shell_basics/thisisaschoolfile\n",
+      " create mode 100644 0x00-shell_basics/thisisatextfile\n"
      ]
     },
     {
@@ -2753,7 +2738,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   228d345..52a0dfc  main -> main\n"
+      "   52a0dfc..65baacc  main -> main\n"
      ]
     }
    ],
