--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2719,18 +2719,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 65baacc] 104-school.mgc\n",
-      " 5 files changed, 68 insertions(+), 12 deletions(-)\n",
-      " rewrite 0x00-shell_basics/school.mgc (100%)\n",
-      " create mode 100644 0x00-shell_basics/thisisaschoolfile\n",
-      " create mode 100644 0x00-shell_basics/thisisatextfile\n"
+      "[main 310095c] 104-school.mgc\n",
+      " 2 files changed, 14 insertions(+), 28 deletions(-)\n"
      ]
     },
     {
@@ -2738,7 +2735,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   52a0dfc..65baacc  main -> main\n"
+      "   65baacc..310095c  main -> main\n"
      ]
     }
    ],
