--- a/0x00-shell_basics.ipynb
+++ b/0x00-shell_basics.ipynb
@@ -19,7 +19,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h1>  0x00. Shell  </h1>\n",
+    "<h1>  0x00.shell_basics  </h1>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -39,6 +39,25 @@
      "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/elkomy/alx-system_engineering-devops'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2635,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2654,12 +2673,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "file -C -m 0x00-shell_basics/school.mgc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "file -C -m 0x00-shell_basics/school.mgc "
    ]
   },
   {
@@ -2719,15 +2748,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 310095c] 104-school.mgc\n",
-      " 2 files changed, 14 insertions(+), 28 deletions(-)\n"
+      "[main 77198b0] 104-school.mgc\n",
+      " 2 files changed, 4 insertions(+), 7 deletions(-)\n"
      ]
     },
     {
@@ -2735,7 +2764,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   65baacc..310095c  main -> main\n"
+      "   310095c..77198b0  main -> main\n"
      ]
     }
    ],
