--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -16,6 +16,82 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
+      "[main 65cddee] first commit\n",
+      " 6 files changed, 2939 insertions(+), 21 deletions(-)\n",
+      " rename alx-system_engineering-devops.ipynb => 0x00-shell_basics.ipynb (99%)\n",
+      " create mode 100644 0x01-shell_permissions.ipynb\n",
+      " create mode 100644 0x01-shell_permissions/README.md\n",
+      " rewrite README.md (100%)\n",
+      " delete mode 120000 __ls__\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: remote origin already exists.\n",
+      "Enumerating objects: 11, done.\n",
+      "Counting objects: 100% (11/11), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (8/8), 9.73 KiB | 9.73 MiB/s, done.\n",
+      "Total 8 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   77198b0..65cddee  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
+      "fatal: remote origin already exists.\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#create a new repository on the command line\n",
+    "!echo \"# alx-system_engineering-devops\" > README.md\n",
+    "!git init\n",
+    "!git add .\n",
+    "!git commit -m \"first commit\"\n",
+    "!git branch -M main\n",
+    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "!git push -u origin main\n",
+    "# #push an existing repository from the command line\n",
+    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "!git branch -M main\n",
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting README.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file README.md\n",
+    "\n",
+    "## alx-system_engineering-devops/0x00-shell_basics\n",
+    "## alx-system_engineering-devops/0x01-shell_permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -60,108 +136,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main 284258f] first commit\n",
-      " 1 file changed, 10 insertions(+), 15 deletions(-)\n",
-      "fatal: remote origin already exists.\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
-      "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 445 bytes | 445.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   09c5162..284258f  main -> main\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "fatal: remote origin already exists.\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
-      "Everything up-to-date\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#create a new repository on the command line\n",
-    "!echo \"# alx-system_engineering-devops\" > README.md\n",
-    "!git init\n",
-    "!git add .\n",
-    "!git commit -m \"first commit\"\n",
-    "!git branch -M main\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git push -u origin main\n",
-    "# #push an existing repository from the command line\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git branch -M main\n",
-    "!git push -u origin main"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###\n",
-    "---\n",
-    "<center>\n",
-    "<h1>  0x01. Shell, permissions  </h1>\n",
-    "</center>\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git pull\n",
-    "!git push"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting README.md\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file README.md\n",
-    "\n",
-    "This is a file inside the folder alx-system_engineering-devops.\n",
-    "This is a mandatory file.\n",
-    "The following should be done on 0x00-shell_basics/\n",
-    "1- Write a script that prints the absolute path name of the current working directory. \n",
-    "2- Display the contents list of your current directory.\n",
-    "3- Display current directory contents in a long format\n",
-    "4- Display current directory contents, including hidden files (starting with `.`). Use the long format.\n",
-    "5- "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[main e4c0f50] commiting the alx-system_devops-engineering README.md file\n",
       " 2 files changed, 42 insertions(+), 28 deletions(-)\n",
       "Enumerating objects: 7, done.\n",
@@ -180,8 +154,33 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commiting the alx-system_devops-engineering README.md file\"\n",
+    "!git commit -m \"\"\n",
     "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull\n",
+    "!git push"
    ]
   },
   {
@@ -191,7 +190,20 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 0. Where am I? </h4>\n",
+    "<h1>  0x01. Shell, permissions  </h1>\n",
+    "</center>\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###\n",
+    "---\n",
+    "<center>\n",
+    "<h4>  0-iam_betty </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -202,59 +214,54 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### Write a script that prints the absolute path name of the current working directory. \n",
-    "#### Example:\n",
+    "#### Create a script that switches the current user to the user betty. \n",
+    "* You should use exactly 8 characters for your command (+1 character for the new line)\n",
+    "* You can assume that the user betty will exist when we will run your script\n",
+    "\n",
     "```bash\n",
-    "$ ./0-current_working_directory\n",
-    "/root/alx-system_engineering-devops/0x00-shell_basics\n",
-    "$\n",
+    "julien@ubuntu:/tmp/h$ tail -1 0-iam_betty | wc -c\n",
+    "9\n",
+    "julien@ubuntu:/tmp/h$\n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
-    "\n",
     "* GitHub repository: ``` alx-system_engineering-devops ```\n",
-    "* Directory: <code> 0x00-shell_basics </code>\n",
-    "* File: <code>  0-current_working_directory </code>"
+    "* Directory: <code> 0x01-shell_permissions </code>\n",
+    "* File: <code>  0-iam_betty</code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x01-shell_permissions/0-iam_betty\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x01-shell_permissions/0-iam_betty\n",
+    "#!/bin/bash\n",
+    "su -betty\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# creating 0x00-shell_basics folder\n",
-    "\n",
-    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "\n",
-    "# Create a README.md inside 0x00-shell_basics\n",
-    "file_path = os.path.join(folder_path, 'README.md')\n",
-    "\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a README.md file inside alx-system_engineering-devops/0x00-shell_basics\")\n",
-    "\n",
-    "# Create 0-current_working_directory\n",
-    "file_path = os.path.join(folder_path, '0-current_working_directory')\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash\\npwd\\n\")"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/0-iam_betty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/0-current_working_directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,30 +269,45 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "pwd\n"
+      "su -betty\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x00-shell_basics/0-current_working_directory"
+    "!cat 0x01-shell_permissions/0-iam_betty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/elkomy/alx-system_engineering-devops\n"
+      "su: invalid option -- 'b'\n",
+      "Try 'su --help' for more information.\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'./0x01-shell_permissions/0-iam_betty\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./0x01-shell_permissions/0-iam_betty\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'./0x01-shell_permissions/0-iam_betty\\n'' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "./0x00-shell_basics/0-current_working_directory"
+    "./0x01-shell_permissions/0-iam_betty"
    ]
   },
   {
