--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -203,7 +203,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4>  0-iam_betty </h4>\n",
+    "<h4>  0. My name is Betty </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -233,21 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/0-iam_betty\n"
+      "Overwriting 0x01-shell_permissions/0-iam_betty\n"
      ]
     }
    ],
    "source": [
     "%%file 0x01-shell_permissions/0-iam_betty\n",
     "#!/bin/bash\n",
-    "su -betty\n"
+    "su betty\n"
    ]
   },
   {
@@ -279,57 +279,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "su: invalid option -- 'b'\n",
-      "Try 'su --help' for more information.\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'./0x01-shell_permissions/0-iam_betty\\n'' returned non-zero exit status 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./0x01-shell_permissions/0-iam_betty\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
-      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'./0x01-shell_permissions/0-iam_betty\\n'' returned non-zero exit status 1."
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "./0x01-shell_permissions/0-iam_betty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 0645cde] commit 0-current_working_directory\n",
-      " 2 files changed, 20 insertions(+), 22 deletions(-)\n",
-      "Enumerating objects: 9, done.\n",
-      "Counting objects: 100% (9/9), done.\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "tail -1 0x01-shell_permissions/0-iam_betty | wc -c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 375e218] commit 0-current_working_directory\n",
+      " 3 files changed, 138 insertions(+), 112 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/0-iam_betty\n",
+      "Enumerating objects: 10, done.\n",
+      "Counting objects: 100% (10/10), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 647 bytes | 647.00 KiB/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Writing objects: 100% (6/6), 2.36 KiB | 2.36 MiB/s, done.\n",
+      "Total 6 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   a80849a..0645cde  main -> main\n",
+      "   65cddee..375e218  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -348,7 +334,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 1. What’s in there? </h4>\n",
+    "<h4> 1. Who am I </h4>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -358,80 +344,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Display the contents list of your current directory.\n",
+    "* Write a script that prints the effective username of the current user.\n",
     "* Example:\n",
     "    ```bash\n",
-    "    $ ./1-listit\n",
-    "    Applications    Documents   Dropbox Movies Pictures\n",
-    "    Desktop Downloads   Library Music Public\n",
-    "    $\n",
+    "    julien@ubuntu:/tmp/h$ ./1-who_am_i\n",
+    "    julien\n",
+    "    julien@ubuntu:/tmp/h$ \n",
     "    ```\n",
     "\n",
     "* Repo:\n",
     "\n",
     "    * GitHub repository: <code > alx-system_engineering-devops </code>\n",
-    "    * Directory: <code > 0x00-shell_basics </code>\n",
-    "    * File: <code >  File: 1-listit </code>\n",
+    "    * Directory: <code > 0x01-shell_permissions </code>\n",
+    "    * File: <code >  File: 1-who_am_i </code>\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# creating 0x00-shell_basics folder\n",
-    "\n",
-    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "\n",
-    "# Create 0-current_working_directory\n",
-    "file_path = os.path.join(folder_path, '1-listit')\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash\\nls\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n"
+      "Writing 0x01-shell_permissions/1-who_am_i\n"
      ]
     }
    ],
    "source": [
-    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit\n",
+    "%%file 0x01-shell_permissions/1-who_am_i\n",
     "#!/bin/bash\n",
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* You cant put any notation like "
+    "whoami"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/1-listit"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/1-who_am_i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -439,29 +398,29 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "ls\n"
+      "whoami\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x00-shell_basics/1-listit"
+    "!cat 0x01-shell_permissions/1-who_am_i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x00-shell_basics  README.md  alx-system_engineering-devops.ipynb\n"
+      "elkomy\n"
      ]
     }
    ],
    "source": [
-    "!./0x00-shell_basics/1-listit"
+    "!./0x01-shell_permissions/1-who_am_i"
    ]
   },
   {
@@ -491,7 +450,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commit 1-listit1\"\n",
+    "!git commit -m \"who\"\n",
     "!git push -u origin main"
    ]
   },
